--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 packaging==23.1
+psycopg2==2.9.6
 pytz==2023.3
 requests==2.28.2
 ruamel.yaml==0.17.21
